--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
   "name": "austin-and-sally",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@ui5/webcomponents": "^1.0.0-rc.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "@ui5/webcomponents": "^1.0.0-rc.15",
+    "@ui5/webcomponents-base": "^1.0.0-rc.15",
+    "@ui5/webcomponents-fiori": "^1.0.0-rc.15",
+    "@ui5/webcomponents-icons": "^1.0.0-rc.15",
+    "@ui5/webcomponents-react": "^0.18.4",
+    "next": "latest",
+    "next-transpile-modules": "^8.0.0",
+    "postcss": "8.2.15",
+    "react": "latest",
+    "react-dom": "latest"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
+    "nodemon": "^2.0.12"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build && next export -o build/",
+    "start": "next start",
+    "lint": "next lint"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "next"
   },
   "browserslist": {
     "production": [
