--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dev": "next dev",
     "build": "next build && next export -o build/",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": "next"
